2015-07-14  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* stdlib/tst-tls-atexit.c (do_test): Fix typo.

2015-07-14  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* elf/Makefile [ifeq (yes,$(build-shared)) (tests)] (tst-nodelete):
	Add iff $CXX is set.
	[ifeq (yes,$(build-shared)) (modules-names)] (tst-nodelete-rtldmod):
	Likewise.
	(tst-nodelete-zmodiff): Likewise.
	* nptl/Makefile [[ifeq (,$(CXX))] (tests-unsupported)]: Add tst-once5.

2015-07-14  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* stdlib/tst-tls-atexit.c (load): Fix up whitespace.

2015-07-13  Wilco Dijkstra  <wdijkstr@arm.com>

	* sysdeps/aarch64/fpu/math_private.h
	(define math_opt_barrier): Add AArch64 version.
	(math_force_eval): Likewise.

2015-07-13  Wilco Dijkstra  <wdijkstr@arm.com>

	* sysdeps/aarch64/strlen.S (strlen): Optimize strlen.

2015-07-11  H.J. Lu  <hongjiu.lu@intel.com>

	* stdio-common/tst-fmemopen2.c (do_test_without_buffer): Replace
	%ld with %jd and cast to intmax_t.
	(do_test_length_zero): Likewise.

2015-07-10  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/nacl/pthread_condattr_setclock.c: New file.

2015-07-10  Chris Metcalf  <cmetcalf@ezchip.com>

	* sysdeps/tile/libm-test-ulps: Regenerated.

	* math/test-fenvinline.c (feenable_test) [FE_ALL_EXCEPT == 0]:
	Comment out the whole function, not just its body.

2015-07-10  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* stdlib/tst-tls-atexit.c (load): Remove unnecessary mutex
	locks.

	* stdlib/tst-tls-atexit.c (load): Avoid boolean coercion.

2015-07-10  Torvald Riegel  <triegel@redhat.com>

	* nptl/sem_waitcommon.c (__new_sem_wait_slow): Update comments.
	(sem_assume_only_signals_cause_futex_EINTR): Remove.

2015-07-10  Torvald Riegel  <triegel@redhat.com>

	* sysdeps/nptl/futex-internal.h: New file.
	* sysdeps/nacl/futex-internal.h: New file.
	* sysdeps/unix/sysv/linux/futex-internal.h: New file.
	* nptl/allocatestack.c (setxid_mark_thread): Use futex wrappers with
	error checking.